# chaflan

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  generate_models.sh
api_data/: new_event.json
migrations/2026-04-28-120000_add_url_to_events/: down.sql  up.sql
src/: auth.rs  claims.rs  events.rs  main.rs  models.rs  schema.rs
templates/: add_event.html.hbs  event_detail.html.hbs  events.html.hbs  login.html.hbs  update_event.html.hbs
utils/: chaflan
www/static/css/: style.css
www/static/js/: events.js
