[package]
name = "chaflan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "~2.3.8", features = ["postgres", "r2d2", "uuid", "chrono"] }
rocket = { version = "~0.5.1", features = ["json", "uuid"] }
dotenvy = "~0.15.7"
serde = "~1.0.228"
uuid = { version = "~1.23.1", features = ["v4", "serde"] }
chrono = { version = "~0.4.44", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
lazy_static = "1.5.0"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool", "postgres_pool"]

